@@ -1,6 +1,8 @@
 2004-01-01
     * Merged Curt's changes for MSW compilation
-
+    * Attempt to fix extraneous wxDateTime asserts which happen 
+      with debug versions of wxWindows
+ 
 
 2003-12-29
     * Added events sample (in etc)
